attempt to make for loop to check for win

--- a/08week/tic-tac-toe/index.html
+++ b/08week/tic-tac-toe/index.html
@@ -9,7 +9,7 @@
   <h1>Time now for play Lawrence and Sheena!!</h1>
   <h3>First player Lawrence, 2nd Sheena.</h3>
   <p>Its like tic tac toe, ok?</p>
-  <div class="page-center">
+  <div class="board">
     <div class="row">
       <div id="box0" data-cell="0"></div>
       <div id="box1" data-cell="1"></div>
