--- a/04week/tomorrows-technology/index.html
+++ b/04week/tomorrows-technology/index.html
@@ -10,7 +10,7 @@
       <article>
         <img src="img/bg.jpg"/>
         <h2>Tomorrow's Technology, Yesterday's Insights</h2>
-        <h3>Sometimes what the tech world comes up with has already been tried and rejected and really doesn't need to be ressurected---like the Taylorist view...</h3>
+        <h3>Sometimes what the tech world comes up with has already been tried and rejected and really doesn't need to be resurrected---like the Taylorist view...</h3>
         <div class="subject-button">Technology</div>
       </article>
     </main>
