working on many things

--- a/09week/towers-of-hanoi/index.html
+++ b/09week/towers-of-hanoi/index.html
@@ -4,27 +4,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Towers of Hanoi</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <h1>Los Torres de Hanoi</h1>
-  <div class="container">
-    <div class="tower" data-stack="1">
-      <div data-block="25"></div>
-      <div data-block="50"></div>
-      <div data-block="75"></div>
-      <div data-block="100"></div>
+  <div class="page-wrapper">
+    <div class="main-heading">
+      <div class="title-moves">
+        <h1>Los Torres de Hanoi</h1>
+        <div class="movecount">Numero de movimientos: 0</div>
+      </div>
+      <div class="rules-button">
+        <i class="fa fa-question-circle-o" aria-hidden="true" style="height: 72px;"></i>
+      </div>
     </div>
-    <div class="tower" data-stack="2">
+    <div class="container">
+      <div class="tower" data-stack="1">
+        <div data-block="25"></div>
+        <div data-block="50"></div>
+        <div data-block="75"></div>
+        <div data-block="100"></div>
+      </div>
+      <div class="tower" data-stack="2">
+      </div>
+      <div class="tower" data-stack="3">
     </div>
-    <div class="tower" data-stack="3">
+    </div>
+    <div id="announce-game-won"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script
+    src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+    crossorigin="anonymous"></script>
+    <script type="text/javascript" src="script.js"></script>
   </div>
-  </div>
-  <div id="announce-game-won"></div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script
-  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
-  crossorigin="anonymous"></script>
-  <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
