experiment with js

--- a/09week/towers-of-hanoi/index.html
+++ b/09week/towers-of-hanoi/index.html
@@ -5,16 +5,28 @@
   <title>Towers of Hanoi</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
 </head>
 <body>
   <div class="page-wrapper">
     <div class="main-heading">
       <div class="title-moves">
         <h1>Los Torres de Hanoi</h1>
-        <div class="movecount">Numero de movimientos: 0</div>
+        <h4 class="movecount">Numero de movimientos: 0</h4>
       </div>
-      <div class="rules-button">
-        <i class="fa fa-question-circle-o" aria-hidden="true" style="height: 72px;"></i>
+      <div class="button-container">
+        <div class="reset-button">
+          <i class="fa fa-repeat fa-5x" aria-hidden="true"></i>
+        </div>
+        <div class="rules-button">
+          <i class="fa fa-question-circle-o fa-5x" aria-hidden="true"></i>
+        </div>
+        <div class="language-button">
+          <i class="fa fa-language fa-5x" aria-hidden="true"></i>
+        </div>
+      </div>
+      <div class="rules">
+        <p><strong>Reglas del Juego:</strong> Hay que mover todos los bloques a un otro estaque, una pieza por vez, sin poner una mas grande arriba de una mas pequeña. Minimo movimientos: 15. Suerte!</p>
       </div>
     </div>
     <div class="container">
