--- a/09week/towers-of-hanoi/index.html
+++ b/09week/towers-of-hanoi/index.html
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="tower" data-stack="1">
+      <div class="home-stack tower" data-stack="1">
         <div data-block="25"></div>
         <div data-block="50"></div>
         <div data-block="75"></div>
@@ -42,11 +42,13 @@
     </div>
     </div>
     <div id="announce-game-won"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+    <script src="JQuery-Files\jquery-3.2.1.min.js"></script>
     <script
     src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
     integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
     crossorigin="anonymous"></script>
+    <!-- <script src="JQuery-Files\jquery-ui.min.js"> -->
     <script type="text/javascript" src="script.js"></script>
   </div>
 </body>
