really fixed rest this time

--- a/09week/towers-of-hanoi/index.html
+++ b/09week/towers-of-hanoi/index.html
@@ -25,7 +25,7 @@
           <i class="fa fa-language fa-5x" aria-hidden="true"></i>
         </div>
       </div>
-      <div class="rules">
+      <div class="rules-spanish">
         <p><strong>Reglas del Juego:</strong> Hay que mover todos los bloques a un otro estaque, una pieza por vez, sin poner una mas grande arriba de una mas pequeña. Minimo movimientos: 15. Suerte!</p>
       </div>
     </div>
